metadata/force-app/main/default/objects/CustomName_mDdIZ__c/CustomName_mDdIZ__c.object-meta.xml
<CustomObject>
    <description>Description_ddGWj</description>
    <label>CustomLabel_hjXpv</label>
    <nameField>
        <label>CustomLabel_hjXpv</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_hjXpvs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>