metadata/force-app/main/default/objects/CustomName_mDdIZ__c/fields/CustomField_CqpmM__c.field-meta.xml
<CustomField>
    <fullName>CustomField_CqpmM__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldEyYhR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>