metadata/force-app/main/default/objects/CustomName_mDdIZ__c/fields/CustomField_jFrUw__c.field-meta.xml
<CustomField>
    <fullName>CustomField_jFrUw__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielddviUw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>